syntax = "proto2";
package bsn_msg_client_gate;
  
 